--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "watch": "nodemon server.js"
   },
   "babel": {
-    "presets": ["es2015", "react"]
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
   "dependencies": {
     "alt": "^0.17.8",
@@ -45,6 +48,7 @@
     "gulp-if": "^2.0.0",
     "gulp-less": "^3.0.3",
     "gulp-plumber": "^1.0.1",
+    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.7",
