--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "history": "^1.13.0",
     "mongoose": "^4.7.5",
     "morgan": "^1.6.1",
+    "node-sass": "^4.1.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-router": "^1.0.0",
