--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "morgan": "^1.6.1",
     "node-sass": "^4.1.1",
     "react": "^0.14.2",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^0.14.2",
     "react-router": "^1.0.0",
     "request": "^2.65.0",
